Fix missing gap between links in footer

--- a/static/base.css
+++ b/static/base.css
@@ -398,6 +398,7 @@ footer > .links {
 
 footer > .links {
   float: right;
+  gap: 0.5rem;
 }
 
 footer > .links > a {
